src/index.css
:root {
  --nvim-blue: #61AFEF;
  --nvim-background: #282C34;
  --nvim-white: #dedede;
  --nvim-gray: #4D535F;
  --nvim-light-gray: rgb(160, 160, 160);
  --nvim-orange: #ebb145;
  --nvim-green: #85b175;
}

body { 
  margin: 0;
  font-family: InputMono, "Cascadia Mono", Courier, monospace;
  background: var(--nvim-background);
  color: var(--nvim-white);
  overflow: hidden;
}

.experience {
  font-size: 22px;
}

.green {
  color: var(--nvim-green);
}

.tab-bar {
  width: 100vw;
  height: 45px;
  background: #202020;

  box-sizing: border-box;
  display: flex;
  justify-content: left;
  padding-left: 10px;
  padding-right: 10vw;
  overflow: scroll;
  font-size: 16px;
  gap: 5px;
}

.main-tab button {
  display: none;
}

.tab-bar #selected {
  background: var(--nvim-background);
}

.tab {
  position: relative;
  min-width: 30px;
  max-width: 200px;
  width: 100%;
  padding-left: 10px;

  border-radius: 10px 10px 0 0;
  display: grid;
  align-items: center;
  grid-template-columns: 1fr 30px;
}

.tab span {
  text-align: center;
  overflow: hidden;
}

.tab button {
  font-size: 1em;
  width: 30px;
  height: 30px;
  border: 0;
  background: none;
  color: var(--nvim-white);
}

.footer {
  height: 30px;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #333841;
  position: sticky;
  bottom: 0;
  font-size: 18px;
  overflow: hidden;
}

.footer span {
  white-space: nowrap;
  overflow-x: hidden;
  max-width: 25vw;
}

.footer > .left {
  display: flex;
  gap: 1em;
  align-items: center;
}

.mode-indicator {
  height: 30px;
  background: var(--nvim-green);
  color: var(--nvim-background);
  padding: 0 5px 0 5px;
  display: flex;
  align-items: center;
}

.footer > .right {
  display: flex;
  gap: 30px;
  padding-right: 1em;
}

.page {
  height: calc(100vh - 75px);
  overflow: scroll;
}

